; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netkey/extr_key.c_key_sa_recordxfer.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netkey/extr_key.c_key_sa_recordxfer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.secasvar = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32, i32, i32 }
%struct.mbuf = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }
%struct.timeval = type { i32 }

@.str = private unnamed_addr constant [42 x i8] c"key_sa_recordxfer called with sav == NULL\00", align 1
@.str.1 = private unnamed_addr constant [40 x i8] c"key_sa_recordxfer called with m == NULL\00", align 1
@sadb_mutex = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @key_sa_recordxfer(%struct.secasvar* %0, %struct.mbuf* %1) #0 {
  %3 = alloca %struct.secasvar*, align 8
  %4 = alloca %struct.mbuf*, align 8
  %5 = alloca %struct.timeval, align 4
  store %struct.secasvar* %0, %struct.secasvar** %3, align 8
  store %struct.mbuf* %1, %struct.mbuf** %4, align 8
  %6 = load %struct.secasvar*, %struct.secasvar** %3, align 8
  %7 = icmp ne %struct.secasvar* %6, null
  br i1 %7, label %10, label %8

8:                                                ; preds = %2
  %9 = call i32 @panic(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %2
  %11 = load %struct.mbuf*, %struct.mbuf** %4, align 8
  %12 = icmp ne %struct.mbuf* %11, null
  br i1 %12, label %15, label %13

13:                                               ; preds = %10
  %14 = call i32 @panic(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0))
  br label %15

15:                                               ; preds = %13, %10
  %16 = load %struct.secasvar*, %struct.secasvar** %3, align 8
  %17 = getelementptr inbounds %struct.secasvar, %struct.secasvar* %16, i32 0, i32 0
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %19 = icmp ne %struct.TYPE_4__* %18, null
  br i1 %19, label %21, label %20

20:                                               ; preds = %15
  br label %51

21:                                               ; preds = %15
  %22 = load i32, i32* @sadb_mutex, align 4
  %23 = call i32 @lck_mtx_lock(i32 %22)
  %24 = load %struct.mbuf*, %struct.mbuf** %4, align 8
  %25 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load %struct.secasvar*, %struct.secasvar** %3, align 8
  %29 = getelementptr inbounds %struct.secasvar, %struct.secasvar* %28, i32 0, i32 0
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 2
  %32 = load i32, i32* %31, align 4
  %33 = sext i32 %32 to i64
  %34 = add nsw i64 %33, %27
  %35 = trunc i64 %34 to i32
  store i32 %35, i32* %31, align 4
  %36 = load %struct.secasvar*, %struct.secasvar** %3, align 8
  %37 = getelementptr inbounds %struct.secasvar, %struct.secasvar* %36, i32 0, i32 0
  %38 = load %struct.TYPE_4__*, %struct.TYPE_4__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %39, align 4
  %42 = call i32 @microtime(%struct.timeval* %5)
  %43 = getelementptr inbounds %struct.timeval, %struct.timeval* %5, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = load %struct.secasvar*, %struct.secasvar** %3, align 8
  %46 = getelementptr inbounds %struct.secasvar, %struct.secasvar* %45, i32 0, i32 0
  %47 = load %struct.TYPE_4__*, %struct.TYPE_4__** %46, align 8
  %48 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %47, i32 0, i32 0
  store i32 %44, i32* %48, align 4
  %49 = load i32, i32* @sadb_mutex, align 4
  %50 = call i32 @lck_mtx_unlock(i32 %49)
  br label %51

51:                                               ; preds = %21, %20
  ret void
}

declare dso_local i32 @panic(i8*) #1

declare dso_local i32 @lck_mtx_lock(i32) #1

declare dso_local i32 @microtime(%struct.timeval*) #1

declare dso_local i32 @lck_mtx_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
